--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
         tools:layout_editor_absoluteY="341dp" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imgEditProfile"
+        android:id="@+id/imgProfilePost"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="16dp"
