--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -17,7 +17,7 @@
         android:padding="15dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imgEditProfile"
+            android:id="@+id/imgProfilePost"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:src="@drawable/avatar" />
