--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -20,5 +20,6 @@
         android:id="@+id/btnOpenCamera"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:layout_marginTop="30dp"
         android:text="Abrir câmera" />
 </LinearLayout>
