--- a/app/src/main/res/layout/grid_post.xml
+++ b/app/src/main/res/layout/grid_post.xml
@@ -6,9 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <com.example.instagrum.helper.SquareImageView
         android:id="@+id/imageViewGrid"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
